More Contrast Fixes

--- a/style.css
+++ b/style.css
@@ -296,7 +296,7 @@ p {
   font-size: 25px;
   line-height: 27px;
   font-weight: 800;
-  color: #009AA7;
+  color: #007781;
   margin: 10px 10px 0;
   padding: 0;
 }
@@ -311,7 +311,7 @@ p {
   position: absolute;
   bottom: 10px;
   width: 100%;
-  color: #009AA7;
+  color: #007781;
 }
 
 /* Badges */
